Push gitosis updates; create jruby repo

--- a/gitosis.conf
+++ b/gitosis.conf
@@ -1,6 +1,10 @@
 [gitosis]
+daemon = yes
 
 [group gitosis-admin]
 writable = gitosis-admin
-members = nicksieger@vanguard.local
+members = nicksieger, headius
 
+[group jruby]
+writable = jruby
+members = nicksieger, headius
