Add a jruby repo section

--- a/gitosis.conf
+++ b/gitosis.conf
@@ -1,5 +1,4 @@
 [gitosis]
-daemon = yes
 
 [group gitosis-admin]
 writable = gitosis-admin
@@ -8,3 +7,9 @@ members = nicksieger headius
 [group jruby]
 writable = jruby
 members = nicksieger headius
+
+[repo jruby]
+daemon = yes
+gitweb = yes
+description = Ruby for the JVM
+owner = JRuby Community
