Members list doesn't take commas?

--- a/gitosis.conf
+++ b/gitosis.conf
@@ -3,8 +3,8 @@ daemon = yes
 
 [group gitosis-admin]
 writable = gitosis-admin
-members = nicksieger, headius
+members = nicksieger headius
 
 [group jruby]
 writable = jruby
-members = nicksieger, headius
+members = nicksieger headius
