--- a/gitosis.conf
+++ b/gitosis.conf
@@ -5,11 +5,17 @@ writable = gitosis-admin
 members = nicksieger headius
 
 [group jruby]
-writable = jruby
+writable = jruby jruby-rack
 members = nicksieger headius
 
 [repo jruby]
 daemon = yes
 gitweb = yes
 description = Ruby for the JVM
+owner = JRuby Community
+
+[repo jruby-rack]
+daemon = yes
+gitweb = yes
+description = Rack for Servlet Containers
 owner = JRuby Community
