--- a/gitosis.conf
+++ b/gitosis.conf
@@ -2,11 +2,11 @@
 
 [group gitosis-admin]
 writable = gitosis-admin
-members = nicksieger headius
+members = nicksieger headius enebo
 
 [group jruby]
 writable = jruby jruby-rack
-members = nicksieger headius
+members = nicksieger headius enebo
 
 [repo jruby]
 daemon = yes
