--- a/gitosis.conf
+++ b/gitosis.conf
@@ -6,7 +6,7 @@ members = nicksieger headius enebo
 
 [group jruby]
 writable = jruby jruby-rack
-members = nicksieger headius enebo vvsiz
+members = nicksieger headius enebo vvsiz yokolet subbu
 
 [repo jruby]
 daemon = yes
