Add jruby.org repo

--- a/gitosis.conf
+++ b/gitosis.conf
@@ -5,7 +5,7 @@ writable = gitosis-admin
 members = nicksieger headius enebo
 
 [group jruby]
-writable = jruby jruby-rack
+writable = jruby jruby-rack jruby.org
 members = nicksieger headius enebo vvsiz yokolet subbu
 
 [repo jruby]
@@ -18,4 +18,10 @@ owner = JRuby Community
 daemon = yes
 gitweb = yes
 description = Rack for Servlet Containers
+owner = JRuby Community
+
+[repo jruby.org]
+daemon = yes
+gitweb = yes
+description = Website for jruby.org
 owner = JRuby Community
