--- a/gitosis.conf
+++ b/gitosis.conf
@@ -6,7 +6,7 @@ members = nicksieger headius enebo
 
 [group jruby]
 writable = jruby jruby-rack jruby.org
-members = nicksieger headius enebo vvsiz yokolet subbu wmeissner olabini
+members = nicksieger headius enebo vvsiz yokolet subbu wmeissner olabini hiroasari
 
 [repo jruby]
 daemon = yes
