--- a/gitosis.conf
+++ b/gitosis.conf
@@ -5,7 +5,7 @@ writable = gitosis-admin
 members = nicksieger headius enebo
 
 [group jruby]
-writable = jruby jruby-rack jruby.org
+writable = jruby jruby-rack jruby.org jrubyhub
 members = nicksieger headius enebo vvsiz yokolet subbu wmeissner olabini hiroasari calavera
 
 [repo jruby]
@@ -24,4 +24,10 @@ owner = JRuby Community
 daemon = yes
 gitweb = yes
 description = Website for jruby.org
+owner = JRuby Community
+
+[repo jrubyhub]
+daemon = yes
+gitweb = yes
+description = Future hub.jruby.org
 owner = JRuby Community
