Add nahi and jruby-ossl

--- a/gitosis.conf
+++ b/gitosis.conf
@@ -5,8 +5,8 @@ writable = gitosis-admin
 members = nicksieger headius enebo
 
 [group jruby]
-writable = jruby jruby-rack jruby.org jrubyhub
-members = nicksieger headius enebo vvsiz yokolet subbu wmeissner olabini hiroasari calavera
+writable = jruby jruby-rack jruby.org jrubyhub jruby-ossl
+members = nicksieger headius enebo vvsiz yokolet subbu wmeissner olabini hiroasari calavera nahi
 
 [repo jruby]
 daemon = yes
@@ -30,4 +30,10 @@ owner = JRuby Community
 daemon = yes
 gitweb = yes
 description = Future hub.jruby.org
+owner = JRuby Community
+
+[repo jruby-ossl]
+daemon = yes
+gitweb = yes
+description = Ruby SSL compatibility layer for JRuby
 owner = JRuby Community
