--- a/gitosis.conf
+++ b/gitosis.conf
@@ -6,7 +6,7 @@ members = nicksieger headius enebo
 
 [group jruby]
 writable = jruby jruby-rack jruby.org jrubyhub jruby-ossl
-members = nicksieger headius enebo vvsiz yokolet subbu wmeissner olabini hiroasari calavera nahi
+members = nicksieger headius enebo vvsiz yokolet subbu wmeissner olabini hiroasari calavera nahi felgentreff
 
 [repo jruby]
 daemon = yes
