Remove jruby-rack and jrubyhub from jruby.org for now

--- a/gitosis.conf
+++ b/gitosis.conf
@@ -5,7 +5,7 @@ writable = gitosis-admin
 members = nicksieger headius enebo
 
 [group jruby]
-writable = jruby jruby-rack jruby.org jrubyhub jruby-ossl
+writable = jruby jruby.org jruby-ossl
 members = nicksieger headius enebo vvsiz yokolet subbu wmeissner olabini hiroasari calavera nahi felgentreff donv
 
 [repo jruby]
@@ -14,22 +14,10 @@ gitweb = yes
 description = Ruby for the JVM
 owner = JRuby Community
 
-[repo jruby-rack]
-daemon = yes
-gitweb = yes
-description = Rack for Servlet Containers
-owner = JRuby Community
-
 [repo jruby.org]
 daemon = yes
 gitweb = yes
 description = Website for jruby.org
-owner = JRuby Community
-
-[repo jrubyhub]
-daemon = yes
-gitweb = yes
-description = Future hub.jruby.org
 owner = JRuby Community
 
 [repo jruby-ossl]
