Add Chris Seaton.

--- a/gitosis.conf
+++ b/gitosis.conf
@@ -6,7 +6,7 @@ members = nicksieger headius enebo
 
 [group jruby]
 writable = jruby jruby.org jruby-ossl
-members = nicksieger headius enebo vvsiz yokolet subbu wmeissner olabini hiroasari calavera nahi felgentreff donv lopex qmx atambo mkristian eregon
+members = nicksieger headius enebo vvsiz yokolet subbu wmeissner olabini hiroasari calavera nahi felgentreff donv lopex qmx atambo mkristian eregon chrisseaton
 
 [repo jruby]
 daemon = yes
